# bwtui

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: builds.yml  test.yml
bitwarden/: Cargo.toml  LICENSE  README.md
bitwarden/src/: api.rs  api_definition.rs  cipher.rs  lib.rs
src/: api.rs  cipher.rs  login.rs  main.rs  vault.rs
