[package]
name = "bwtui"
version = "0.2.0"
authors = ["Christoph Heiss <contact@christoph-heiss.at>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/christoph-heiss/bwtui"
description = "terminal-based vault browser for bitwarden"

[dependencies]
clipboard = "0.5.0"
cursive_buffered_backend = "0.4.1"
directories = "3.0.1"
fuzzy-matcher = "0.3.7"
serde_json = "1.0.59"
unicase = "2.6.0"

[dependencies.bitwarden]
path = "bitwarden"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["termion-backend"]

[dependencies.cursive_table_view]
git = "https://github.com/BonsaiDen/cursive_table_view.git"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]
