[package]
name = "bwtui"
version = "0.2.0"
authors = ["Christoph Heiss <contact@christoph-heiss.at>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/christoph-heiss/bwtui"
description = "terminal-based vault browser for bitwarden"

[dependencies]
clipboard = "0.5.0"
cursive_buffered_backend = "0.5.0"
cursive_table_view = "0.13.3"
directories = "3.0.1"
fuzzy-matcher = "0.3.7"
serde_json = "1.0.64"
unicase = "2.6.0"

[dependencies.bitwarden]
path = "bitwarden"

[dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["termion-backend"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
