[package]
name = "bitwarden"
version = "0.2.0"
authors = ["Christoph Heiss <me@christoph-heiss.me>"]
edition = "2018"

[dependencies]
aes = "0.6.0"
base64 = "0.13.0"
block-modes = "0.7.0"
failure = "0.1.8"
hkdf = "0.10.0"
hmac = "0.10.1"
pbkdf2 = "0.6.0"
sha2 = "0.9.2"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.reqwest]
version = "0.10.9"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "serde"]
